--- a/index.html
+++ b/index.html
@@ -3,23 +3,10 @@
     <head>
         <meta charset="UTF-8">
         <title>Mi primer documento</title>
-        <link rel="stylesheet" href="style.css">
     </head>
     <body>
-        <div class="Envoltura">
-            <h1>Titulo 1</h1>
-            <p>Este es un parrafo con informacion</p>
-            <h2>Titulo 2</h2>
-            <p>Este es un parrafo con mas informacion</p>
-        </div>        
-        <h3>Titulo 3</h3>
-        <ul>
-            <li>Esta</li>
-            <li>Es</li>
-            <li>Una</li>
-            <li>Lista</li>
-            <li>No ordenada</li>
-        </ul>
-        
+        <h1>Hola Mundo</h1>
+        <a href="https://google.com" target="_blank">Mi primer enlace</a>
+        <img src="images/Html5Image.png" alt="">
     </body>
 </html>
