--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@
     <head>
         <meta charset="UTF-8">
         <title>Mi primer documento</title>
+        <link rel="stylesheet" href="style.css">
     </head>
     <body>
-        <h1>Hola Mundo</h1>
-        <a href="https://google.com" target="_blank">Mi primer enlace</a>
-        <img src="images/Html5Image.png" alt="">
+        <h1>Hola Mundo desde el título</h1>
+        <p>Hola mundo desde el párrafo</p>
     </body>
 </html>
