Reto-3-Creando-Elementos

--- a/index.html
+++ b/index.html
@@ -6,7 +6,18 @@
         <link rel="stylesheet" href="style.css">
     </head>
     <body>
-        <h1>Hola Mundo desde el título</h1>
-        <p>Hola mundo desde el párrafo</p>
+        <p><strong>Mi lista ordenada</strong></p>
+        <ol>
+            <li>Primer elemento de mi lista ordenada</li>
+            <li>Segundo elemento de mi lista ordenada</li>
+            <li>Tercer elemento de mi lista ordenada</li>
+        </ol>
+        <hr>
+        <p><em>Mi lista NO ordenada</em></p>
+        <ul>
+            <li>Primer elemento de mi lista no ordenada</li>
+            <li>Segundo elemento de mi lista no ordenada</li>
+            <li>Tercer elemento de <span>mi lista no ordenada</span></li>
+        </ul>
     </body>
 </html>
