--- a/index.html
+++ b/index.html
@@ -6,18 +6,27 @@
         <link rel="stylesheet" href="style.css">
     </head>
     <body>
-        <p><strong>Mi lista ordenada</strong></p>
-        <ol>
-            <li>Primer elemento de mi lista ordenada</li>
-            <li>Segundo elemento de mi lista ordenada</li>
-            <li>Tercer elemento de mi lista ordenada</li>
-        </ol>
-        <hr>
-        <p><em>Mi lista NO ordenada</em></p>
-        <ul>
-            <li>Primer elemento de mi lista no ordenada</li>
-            <li>Segundo elemento de mi lista no ordenada</li>
-            <li>Tercer elemento de <span>mi lista no ordenada</span></li>
-        </ul>
+        <table>
+            <tr>
+                <th>Nombre</th>
+                <th>Edad</th>
+            </tr>
+            <tr>
+                <td>Rosa</td>
+                <td>19</td>
+            </tr>
+            <tr>
+                <td>Luis</td>
+                <td>23</td>
+            </tr>
+            <tr>
+                <td>Andrea</td>
+                <td>22</td>
+            </tr>
+            <tr>
+                <td>Oscar</td>
+                <td>35</td>
+            </tr>
+        </table>
     </body>
 </html>
