Reto-6-Moviendo-Cajas

--- a/index.html
+++ b/index.html
@@ -7,43 +7,6 @@
         <link rel="stylesheet" href="style.css">
     </head>
     <body>
-        <form>
-            <fieldset>
-                <label for="name">Nombre </label>
-                <input type="text" id="name" name="name">
-            </fieldset>
-            <fieldset>
-                <label for="lastname">Apellido </label>
-                <input type="text" id="lastname" name="lastname">
-            </fieldset>
-            <fieldset>
-                <label for="email">Apellido </label>
-                <input type="email" id="email" name="email">
-            </fieldset>
-            <fieldset>
-                <label for="color">Color </label>
-                <select name="color" id="color">
-                    <option value="" selected disabled hidden>Selecciona un color</option>
-                    <option value="Red">Rojo</option>
-                    <option value="Blue">Azul</option>
-                    <option value="Yellow">Amarillo</option>
-                </select>                
-            </fieldset>
-            <fieldset>
-                <label for="size_S">Talla S</label>
-                <input type="radio" id="size_S" name="size">
-                <label for="size_M">Talla M</label>
-                <input type="radio" id="size_M" name="size">
-                <label for="size_L">Talla L</label>
-                <input type="radio" id="size_L" name="size">
-            </fieldset>
-            <fieldset>
-                <label for="comment">Comentario</label>
-                <textarea name="comment" id="comment" cols="30" rows="5"></textarea>
-            </fieldset>
-            <fieldset>
-                <button type="submit">Pedir</button>
-            </fieldset>
-        </form>
+        <p>Este párrafo por defecto es representado en CSS con una caja en bloque. Y <span>este elemento con una caja en linea</span>.</p>
     </body>
 </html>
