--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
         <link rel="stylesheet" href="style.css">
     </head>
     <body>
-        <p>Este párrafo por defecto es representado en CSS con una caja en bloque. Y <span>este elemento con una caja en linea</span>.</p>
+        <div class="Primer-Contenedor">
+            <p>Aprendiendo Fondos CSS</p>
+        </div>
+        <div class="Segundo-Contenedor"></div>
+        <div class="Tercer-Contenedor"></div>
     </body>
 </html>
