--- a/index.html
+++ b/index.html
@@ -7,10 +7,17 @@
         <link rel="stylesheet" href="style.css">
     </head>
     <body>
-        <div class="Primer-Contenedor">
-            <p>Aprendiendo Fondos CSS</p>
+        <div class="Head">
+            <div class="Eye">
+                <div class="Pupil"></div>
+            </div>
+            <div class="Mouth"></div>
         </div>
-        <div class="Segundo-Contenedor"></div>
-        <div class="Tercer-Contenedor"></div>
+        <div class="Body">
+            <div class="Arm"></div>
+        </div>
+        <div class="Message">
+            <h1>Aprendiendo de posicionamiento con CSS!</h1>
+        </div>
     </body>
 </html>
