Reto-9-Seleccion-Elementos

--- a/index.html
+++ b/index.html
@@ -7,17 +7,20 @@
         <link rel="stylesheet" href="style.css">
     </head>
     <body>
-        <div class="Head">
-            <div class="Eye">
-                <div class="Pupil"></div>
+        <div class="Contenedor1">
+            <h1 id="Titulo">Título h1</h1>
+        </div>
+        <div class="Contenedor2">
+            <h2>Subtitulo con h2</h2>
+            <h3>Corta decripcion con h3</h3>
+        </div>
+        <div class="Productos">
+            <div>
+                <p>Primer producto con etiqueta p</p>
+                <p>Segundo producto con etiqueta p</p>
+                <p>Tercer producto con etiqueta p</p>
+                <a class="Enlace" href="#">Mi enlace de colores</a>
             </div>
-            <div class="Mouth"></div>
-        </div>
-        <div class="Body">
-            <div class="Arm"></div>
-        </div>
-        <div class="Message">
-            <h1>Aprendiendo de posicionamiento con CSS!</h1>
         </div>
     </body>
 </html>
