Reto-12-Ajustando-Pantalla

--- a/index.html
+++ b/index.html
@@ -7,17 +7,6 @@
         <link rel="stylesheet" href="style.css">
     </head>
     <body>
-        <div class="Head">
-            <div class="Eye">
-                <div class="Pupil"></div>
-            </div>
-            <div class="Mouth"></div>
-        </div>
-        <div class="Body">
-            <div class="Arm"></div>
-        </div>
-        <div class="Message">
-            <h1>Sombras con CSS!</h1>
-        </div>
+        <h1>Cambiando estilos segun la pantalla</h1>
     </body>
 </html>
